# tech_talk_django_pg_triggers

./: .editorconfig  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
.devcontainer/: devcontainer.json
conf/: supervisord.conf
src/: Makefile  manage.py
src/apps/sandbox/: apps.py
src/config/: asgi.py  urls.py  wsgi.py
src/config/settings/: __init__.py  common.py  local.py
